--- a/src/css/login.css
+++ b/src/css/login.css
@@ -4,6 +4,9 @@
   padding: 0px;
   box-sizing: border-box;
 }
+.error-message {
+  color: red;
+}
 
 /* Responsive styles */
 @media only screen and (min-width: 768px) {
