--- a/src/css/Trending.css
+++ b/src/css/Trending.css
@@ -372,6 +372,7 @@
     margin-top: 20px; 
     margin-left: 10px; 
     margin-right: 10px; 
+    margin-bottom: 20px;
   }
   .event-detail p {
     font-size: 17px; /* Decrease the font size for p on smaller screens */
