--- a/src/css/myProfile.css
+++ b/src/css/myProfile.css
@@ -10,3 +10,31 @@
     height: 100%;
     object-fit: cover;
 }
+
+.profile-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - 240px); /* Adjust the value if necessary */
+    margin-top: 150px;
+    margin-bottom: 150px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 800px; /* Adjust the max-width as needed */
+    width: 90%; /* This will ensure the container takes up 90% of the available width */
+}
+
+.form-container {
+    width: 90%; /* Adjust the width as needed */
+    max-width: 1000px; /* Set a maximum width if necessary */
+    margin: 0 auto; /* Center the container horizontally */
+}
+
+.complete-h2 {
+    font-size: 22px;
+    margin-bottom: 30px; /* Adjust the margin bottom as needed */
+    margin-top: 30px;
+}
+
+
+  
